<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YiDa</string>
    <string name="login">登录</string>
    <string name="login_desc">注册易达账号表示你同意</string>
    <string name="login_deal">最终用户协议</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="login_signup">注册</string>
    <string name="login_forget">忘记密码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reg_verification">获取验证码</string>
    <string name="reg_next">下一步</string>

</resources>
