<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<EditText
	    android:id="@+id/btnPhoneNum"
	    style="@style/login_style"
	    android:layout_width="match_parent"
	    android:hint="请填写手机号" />

	<EditText 
	    android:id="@+id/btnPassword"
	   style="@style/login_style"
	    android:hint="请填写密码"/>
	<Button 
	    android:id="@+id/btnLogin"
	   style="@style/login_style"
	    android:text="@string/login"/>
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView 
	        android:text="@string/login_desc"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	    <TextView 
	        android:id="@+id/tv_deal"
	        android:textColor="#ff0000ff"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login_deal"/>
	</LinearLayout>
</LinearLayout>
