<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <LinearLayout
       style="@style/register_style">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="60dp"
           android:text="+86"/>
       <EditText
           android:id="@+id/et_phone"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:hint="请输入你的手机号码"/>
   </LinearLayout>
    <LinearLayout
        style="@style/register_style">
        <EditText
            android:id="@+id/et_verification"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:hint="手机验证码"/>
        <Button
            android:id="@+id/btn_verification"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:text="@string/reg_verification"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_next"
        style="@style/register_style"
        android:text="@string/reg_next"/>
    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_login"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/link_color"
        android:text="@string/login"/>
</LinearLayout>
